<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="0"
        android:textSize="40sp"
        android:id="@+id/view"/>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">
        <TableRow>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:id="@+id/c"/>
            <TextView
            android:text="M"
            android:id="@+id/mtext"/>
            <TextView />
            <Button
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="del" />
        </TableRow>
        <TableRow>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MC"
                android:id="@+id/mc"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MR"
                android:id="@+id/mr"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M+"
                android:id="@+id/mplus"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M-"
                android:id="@+id/mminus"/>
        </TableRow>
        <TableRow>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_seven"
                android:id="@+id/seven"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_eight"
                android:id="@+id/eight"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_nine"
                android:id="@+id/nine"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:id="@+id/plus"/>
        </TableRow>
        <TableRow>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_four"
                android:id="@+id/four"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_five"
                android:id="@+id/five"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_six"
                android:id="@+id/six"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:id="@+id/minus"/>
        </TableRow>
        <TableRow>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_one"
                android:id="@+id/one"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_two"
                android:id="@+id/two"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_three"
                android:id="@+id/three"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:id="@+id/multiply"/>
        </TableRow>
        <TableRow>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:id="@+id/point"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"
                android:id="@+id/zero"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equally"
                android:id="@+id/equally"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:id="@+id/divide"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
